# HACKS2026

./: COPYING  README.md  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx  providers.tsx  splash.module.css
app/activity/: activity.module.css  activity.tsx  page.tsx
app/components/: Card.tsx  card.module.css
app/create/: create.module.css  create.tsx  page.tsx
app/feed/: feed.module.css  feed.tsx  page.tsx
app/listing/: listing.module.css  listing.tsx  page.tsx
app/login/: login.module.css  login.tsx  page.tsx
app/nav/: nav.module.css  nav.tsx
app/profile/: page.tsx  profile.module.css
app/register/: page.tsx  register.module.css  register.tsx
backend/: .gitignore  Cargo.toml  Justfile
backend/src/: api.rs  main.rs
backend/tools/: schema.sql
