[package]
name = "hacks26"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5"
anyhow = "1.0.98"
axum = { version = "0.8.0", features = ["macros"] }
chrono = { version = "0.4.41", features = ["serde"] }
futures = "0.3.30"
log = "0.4.27"
rand_core = { version = "0.6", features = ["getrandom"] }
serde_json = "1.0"
serde_repr = "0.1"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
tower = { version = "0.5.2", features = ["util"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
